# defi_risk_agent

./: .env.example  .env.langsmith.example  .gitignore  Dockerfile  README.md  batch_run.sh  defi_risk_metrics.md  docker-compose.langsmith.yml  docker-compose.yml  justfile  mock_agent.py  pyproject.toml  users.xml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: layout.tsx  page.tsx  server.ts
frontend/app/api/events/[taskId]/: route.ts
frontend/app/api/run/: route.ts
frontend/app/hooks/: useAnalysis.ts
src/: __init__.py  agent.py  agent_utils.py  cli.py  logging.py  server.py  utils.py
src/data_layer/: portfolio.py  tokens.py
src/data_layer_old/: portfolio.py  tokens.py
src/metrics/: base.py  leverage.py  liquidity.py  liquidity_old.py  protocol.py  systemic.py  user.py
src/prompts/: convo.md  input.md  risk.md  system.md
src/providers/: alchemy.py  coingecko.py  dexscreener.py  ethplorer.py  goplus.py  graph.py  moralis.py
tests/providers/: test_alchemy.py  test_coingecko.py  test_dexscreener.py  test_ethplorer.py  test_goplus.py  test_graph.py  test_moralis.py
