[tool.poetry]
name = "defi-risk-agent"
version = "0.1.0"
description = ""
authors = ["renato <bnh@terra>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
langgraph = "^0.6.2"
langchain-openai = "^0.3.28"
langchain = "^0.3.27"
pytest-dotenv = "^0.5.2"
click = "^8.2.1"
rich = "^14.1.0"
openai = "^1.98.0"
langgraph-checkpoint-sqlite = "^2.0.11"
langgraph-checkpoint-postgres = "^2.0.11"
instructor = "^1.10.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.30.0"
pytest = "^8.4.1"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
